; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_lex.c_lexnest.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_lex.c_lexnest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vars = type { i32*, i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vars*, i32*, i32*)* @lexnest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lexnest(%struct.vars* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.vars*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.vars* %0, %struct.vars** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.vars*, %struct.vars** %4, align 8
  %8 = getelementptr inbounds %struct.vars, %struct.vars* %7, i32 0, i32 3
  %9 = load i32*, i32** %8, align 8
  %10 = icmp eq i32* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.vars*, %struct.vars** %4, align 8
  %14 = getelementptr inbounds %struct.vars, %struct.vars* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.vars*, %struct.vars** %4, align 8
  %17 = getelementptr inbounds %struct.vars, %struct.vars* %16, i32 0, i32 3
  store i32* %15, i32** %17, align 8
  %18 = load %struct.vars*, %struct.vars** %4, align 8
  %19 = getelementptr inbounds %struct.vars, %struct.vars* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load %struct.vars*, %struct.vars** %4, align 8
  %22 = getelementptr inbounds %struct.vars, %struct.vars* %21, i32 0, i32 2
  store i32* %20, i32** %22, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load %struct.vars*, %struct.vars** %4, align 8
  %25 = getelementptr inbounds %struct.vars, %struct.vars* %24, i32 0, i32 1
  store i32* %23, i32** %25, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load %struct.vars*, %struct.vars** %4, align 8
  %28 = getelementptr inbounds %struct.vars, %struct.vars* %27, i32 0, i32 0
  store i32* %26, i32** %28, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
